<resources>
    <string name="app_name">Xo so VIP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="message_back_press_to_exit">Nhấn 2 lần để thoát</string>
    <string name="error_no_internet">Không có kết nối internet!</string>
    <string name="result">Kết quả</string>
    <string name="analytics">Thống kê</string>
    <string name="message_can_not_request">Không thể kết nối</string>
    <string name="error_try_again">Có lỗi. Vui lòng thử lại!</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="date_format_title">dd-MM-yyyy</string>
    <string name="title_activity_dream">Sổ mơ</string>
    <string name="input_dream">Nhập giấc mơ</string>
    <string name="title_activity_random_lottery">Quay Thử</string>
    <string name="tbl_end" />
    <string name="column_end">Đuôi</string>
    <string name="column_begin">Đầu</string>
    <string name="title_loto">Lô tô</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="err_network">Không có kết nối dữ liệu</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="result_value">Kết quả</string>
    <string name="not_yet_result">Chưa có kết quả</string>
    <string name="live_loto">Lô trực tiếp</string>
    <string name="result_central">Kết quả xổ số miền Trung</string>
    <string name="begin">Đầu</string>
    <string name="value_0">0</string>
    <string name="value_1">1</string>
    <string name="value_2">2</string>
    <string name="value_3">3</string>
    <string name="value_4">4</string>
    <string name="value_5">5</string>
    <string name="value_6">6</string>
    <string name="value_7">7</string>
    <string name="value_8">8</string>
    <string name="value_9">9</string>
    <string name="prize">Giải</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <string name="message_notification_title_template">Message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="region">Tỉnh thành</string>
    <string name="begin_date">Từ ngày</string>
    <string name="end_date">Đến ngày</string>
    <string name="note_number_tool">Điền bộ số bạn muốn xem.(Ngăn số bằng dấu chấm)</string>
    <string name="number_set">Bộ số</string>
    <string name="count_visible">Số lần xuất hiện</string>
    <string name="last_visible">Xuất hiện lần cuối</string>
    <string name="select_analytics">Chọn thống kê bạn muốn xem</string>
    <string name="set_special">Chỉ xét những giải đặc biệt</string>
    <string name="view_result">Xem kết quả</string>
    <string name="title_activity_analytics_sum">Thống kê theo tổng</string>
    <string name="note_sum">Điền tổng mà bạn muốn xem</string>
    <string name="title_activity_analytics_frequency">Thống kê tần xuất bộ số</string>
    <string name="date">Ngày</string>
    <string name="title_activity_frequency_info">Chi tiết thống kê tần xuất</string>
    <string name="day_ago">Số ngày trước</string>
    <string name="title_activity_analytics_important_activity">Thống kê quan trọng</string>
    <string name="tv_analytics_type_select">Chọn thống kê bạn muốn xem</string>
    <string name="title_activity_important_info">Chi tiết TK quan trọng</string>
    <string name="title_activity_analytics_loto_auto">Thống kê lô xiên tự động</string>
    <string name="title_activity_analytics_synthetic">Thống kê tổng hợp</string>
    <string name="analytics_type">Loại thống kê</string>
    <string name="loading">Loading...</string>
    <string name="query_date">Xem đến ngày</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
