<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="com.xproject.xoso.xoso.view.activity.AnalyticsSum">

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="IncludeLayoutParam" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/size_4"
            android:text="@string/region"
            android:textSize="@dimen/font_12" />

        <Spinner
            android:id="@+id/sp_province"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_36"
            android:background="@android:color/transparent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_0_5"
            android:background="@color/black_20" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/size_8"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edt_date_begin"
                style="@style/EditTextAccent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_48"
                android:drawableRight="@drawable/ic_action_calendar"
                android:focusable="false"
                android:hint="@string/begin_date"
                android:longClickable="false"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_8"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edt_date_end"
                style="@style/EditTextAccent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_48"
                android:drawableRight="@drawable/ic_action_calendar"
                android:focusable="false"
                android:hint="@string/end_date"
                android:longClickable="false"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_number_set"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <EditText
            android:id="@+id/edt_number_set"
            style="@style/EditTextAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_sum"
            android:inputType="number"
            android:longClickable="false"
            android:maxLength="1"
            android:textSize="@dimen/font_15" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/checkSpecial"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/set_special"
        android:textAppearance="@style/TextAppearance.AppCompat.Notification.Title"
        android:textColor="@color/black_75"
        android:textSize="16sp"
        android:theme="@style/checkBoxStyle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_number_set" />

    <Button
        android:id="@+id/btn_result"
        style="@style/Button_app"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginEnd="@dimen/size_64"
        android:layout_marginLeft="@dimen/size_64"
        android:layout_marginRight="@dimen/size_64"
        android:layout_marginStart="@dimen/size_64"
        android:layout_marginTop="16dp"
        android:text="@string/view_result"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkSpecial" />

</android.support.constraint.ConstraintLayout>
