<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="com.xproject.xoso.xoso.view.activity.AnalyticsFrequencyActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2">

        <TextView
            android:paddingLeft="@dimen/size_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:textSize="@dimen/font_12"/>

        <Spinner
            android:id="@+id/sp_province"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_36"
            android:background="@android:color/transparent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_20"
            android:layout_marginLeft="@dimen/size_5"
            android:layout_marginRight="@dimen/size_5"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_number_set"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <EditText
            style="@style/EditTextAccent"
            android:longClickable="false"
            android:id="@+id/edt_number_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_number_tool"
            android:inputType="number"
            android:digits="0123456789."
            android:textSize="@dimen/font_15"/>
    </android.support.design.widget.TextInputLayout>



    <CheckBox
        android:theme="@style/checkBoxStyle"
        android:id="@+id/checkSpecial"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/set_special"
        android:textAppearance="@style/TextAppearance.AppCompat.Notification.Title"
        android:textColor="@color/black_75"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_number_set"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp" />

    <Button
        style="@style/Button_app"
        android:id="@+id/btn_get_result"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/view_result"
        android:layout_marginLeft="@dimen/size_64"
        android:layout_marginRight="@dimen/size_64"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkSpecial"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/textInputLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            style="@style/EditTextAccent"
            android:id="@+id/edt_day_ago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="5"
            android:hint="@string/day_ago"
            android:textSize="@dimen/font_15"/>
    </android.support.design.widget.TextInputLayout>


</android.support.constraint.ConstraintLayout>
