<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/not_yet_result"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_16"
        android:visibility="invisible" />

    <ScrollView
        android:id="@+id/scroll_central_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/size_8"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/ln_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_16"
                android:layout_marginLeft="@dimen/size_16"
                android:layout_marginRight="@dimen/size_16"
                android:layout_marginTop="@dimen/size_8"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_mute"
                    android:layout_width="@dimen/size_36"
                    android:layout_height="@dimen/size_36"
                    android:contentDescription="@null"
                    android:padding="@dimen/size_4"
                    android:src="@mipmap/ic_mute" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_region"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/result_central"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_18"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black_40" />
                </LinearLayout>
            </LinearLayout>


            <!-- Linear Table -->
            <include layout="@layout/central_table" />


            <TextView
                android:id="@+id/tv_loto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_16"
                android:layout_marginTop="@dimen/size_16"
                android:gravity="center"
                android:text="@string/live_loto"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_18"
                android:textStyle="bold" />

            <include layout="@layout/central_loto" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>